Stop hiding the annotations button on performance graphs
We have performance annotations now!

The annotations are hidden by default, but clicking the annotations button
next to the log button, will show them for that graph. Might want to add a
global option as well, but we'll see.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@23561 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/util/test/perf/perfgraph.css
+++ b/util/test/perf/perfgraph.css
@@ -39,8 +39,7 @@ div.lspacer {
     height: 20px;
     border: 1px solid grey;
     padding: 0px 5px;
-    /* change margin back to 5px 10px 0px 0px when annotations are added */
-    margin: 0px 10px 0px 0px;
+    margin: 5px 10px 0px 0px;
 }
 .blackAnnotation {
   color: black !important;
